--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           }
 
           document.addEventListener("keydown", function(event) {
-            if (event.key.length === 1) {
+            if (event.key.length === 1 && event.key != ' ') {
               addDomElement("span", { text: event.key });
               charCounts[event.key] = (charCounts[event.key] || 0) + 1;
               updateChart();
