--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/ID202-letters-project.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/ID202-letters-project.data.br",
-        frameworkUrl: buildUrl + "/ID202-letters-project.framework.js.br",
-        codeUrl: buildUrl + "/ID202-letters-project.wasm.br",
+        dataUrl: buildUrl + "/ID202-letters-project.data.unityweb",
+        frameworkUrl: buildUrl + "/ID202-letters-project.framework.js.unityweb",
+        codeUrl: buildUrl + "/ID202-letters-project.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ID202 Project 2 Unity",
