--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         codeUrl: buildUrl + "/ID202-letters-project.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "ID202 Project 2 Unity",
+        productName: "ID202_Project_2_Unity",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
       };
